--- a/contracts/.env.example
+++ b/contracts/.env.example
@@ -12,5 +12,8 @@ RONDA_FACTORY_ADDRESS=0x0000000000000000000000000000000000000000  # Replace with
 PENALTY_TOKEN_ADDRESS=0x0000000000000000000000000000000000000000  # Replace with deployed penalty token address
 PAYMENT_TOKEN_ADDRESS=0x0000000000000000000000000000000000000000  # Replace with your ERC20 token address
 
+# CCIP environment variables
+CCIP_ROUTER=0x0000000000000000000000000000000000000000
+
 # Optional: Etherscan API key for contract verification
 ETHERSCAN_API_KEY=your_etherscan_api_key_here
