--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -11,8 +11,9 @@ via_ir = true
 # Remappings
 remappings = [
     "@openzeppelin/=lib/openzeppelin-contracts/",
-    "@chainlink/contracts=lib/chainlink-brownie-contracts/contracts/src/v0.8/",
-    "@forge-std/=lib/forge-std/src/"
+    "@chainlink/contracts=lib/chainlink-brownie-contracts/contracts",
+    "@forge-std/=lib/forge-std/src/",
+    "chainlink-ccip/=lib/chainlink-ccip/chains/evm"
 ]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
