--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -27,3 +27,21 @@ depth = 15
 
 [profile.default.metadata]
 bytecode_hash = "ipfs"
+
+# Network configurations
+[rpc_endpoints]
+sepolia = "${SEPOLIA_RPC_URL}"
+mainnet = "${MAINNET_RPC_URL}"
+
+[etherscan]
+sepolia = { key = "${ETHERSCAN_API_KEY}" }
+mainnet = { key = "${ETHERSCAN_API_KEY}" }
+
+# Deployment configuration for Sepolia
+[profile.sepolia]
+# Inherits all settings from default profile
+# Only override Sepolia-specific settings
+gas_reports = ["*"]
+gas_limit = 30000000
+block_gas_limit = 30000000
+gas_price = 1000000000  # 1 gwei
