--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -2,7 +2,7 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-solc = "0.8.20"
+solc = "0.8.22"
 optimizer = true
 optimizer_runs = 200
 evm_version = "paris"
@@ -10,7 +10,8 @@ via_ir = true
 
 # Remappings
 remappings = [
-    "@openzeppelin/=lib/openzeppelin-contracts/",
+    '@openzeppelin/contracts/=lib/openzeppelin-contracts-upgradeable/lib/openzeppelin-contracts/contracts/',
+    '@openzeppelin/contracts-upgradeable/=lib/openzeppelin-contracts-upgradeable/contracts/',
     "@chainlink/contracts=lib/chainlink-brownie-contracts/contracts",
     "@forge-std/=lib/forge-std/src/",
     "chainlink-ccip/=lib/chainlink-ccip/chains/evm"
