feat: ccip sender deployment

--- a/contracts/.env.example
+++ b/contracts/.env.example
@@ -4,6 +4,7 @@ PRIVATE_KEY=your_private_key_here
 # RPC URLs for different networks
 SEPOLIA_RPC_URL=https://sepolia.infura.io/v3/YOUR_PROJECT_ID
 MAINNET_RPC_URL=https://mainnet.infura.io/v3/YOUR_PROJECT_ID
+AVALANCHE_FUJI_RPC_URL=https://api.avax-test.network/ext/bc/C/rpc
 
 # Chainlink VRF Parameters Sepolia
 VRF_SUBSCRIPTION_ID=1  # Replace with your subscription ID
@@ -19,6 +20,21 @@ PAYMENT_TOKEN_ADDRESS=0x0000000000000000000000000000000000000000  # Replace with
 
 # CCIP environment variables
 CCIP_ROUTER=0x0000000000000000000000000000000000000000
+
+# CCIP Router addresses for different networks
+CCIP_ROUTER_FUJI=0xF694E193200268f9a4868e4Aa017A0118C9a8177  # Avalanche Fuji CCIP Router
+CCIP_ROUTER_SEPOLIA=0xD0daae2231E9CB96b94C8512223533293C3693Bf  # Ethereum Sepolia CCIP Router
+CCIP_ROUTER_MUMBAI=0x70499c328e1E2a3c41108bd3730F6670a44595D1  # Polygon Mumbai CCIP Router
+SENDER_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000 # Update with the Sender Contract Address
+
+# Chain selectors for different networks
+# - Ethereum Sepolia: 16015286601757825753
+# - Polygon Mumbai: 12532609583862916517
+# - BSC Testnet: 13264668187771770619
+# - Base Sepolia: 10382471318274421120
+# - Avalanche Fuji: 14767482510784806043
+SOURCE_CHAIN_SELECTOR=14767482510784806043 # Avalanche Fuji
+DESTINATION_CHAIN_SELECTOR=16015286601757825753  # Default: Ethereum Sepolia
 
 # Etherscan API key for contract verification
 ETHERSCAN_API_KEY=your_etherscan_api_key_here
