--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -33,6 +33,7 @@ bytecode_hash = "ipfs"
 [rpc_endpoints]
 sepolia = "${SEPOLIA_RPC_URL}"
 mainnet = "${MAINNET_RPC_URL}"
+avalanche-fuji = "${AVALANCHE_FUJI_RPC_URL}"
 
 [etherscan]
 sepolia = { key = "${ETHERSCAN_API_KEY}" }
