--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -12,9 +12,7 @@ via_ir = true
 remappings = [
     '@openzeppelin/contracts/=lib/openzeppelin-contracts-upgradeable/lib/openzeppelin-contracts/contracts/',
     '@openzeppelin/contracts-upgradeable/=lib/openzeppelin-contracts-upgradeable/contracts/',
-    "@chainlink/contracts=lib/chainlink-brownie-contracts/contracts",
-    "@forge-std/=lib/forge-std/src/",
-    "chainlink-ccip/=lib/chainlink-ccip/chains/evm"
+    "@forge-std/=lib/forge-std/src/"
 ]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
@@ -31,27 +29,19 @@ bytecode_hash = "ipfs"
 
 # Network configurations
 [rpc_endpoints]
-sepolia = "${SEPOLIA_RPC_URL}"
-mainnet = "${MAINNET_RPC_URL}"
-avalanche-fuji = "${AVALANCHE_FUJI_RPC_URL}"
 hedera-testnet = "${HEDERA_TESTNET_RPC_URL}"
 hedera-mainnet = "${HEDERA_MAINNET_RPC_URL}"
 
-[etherscan]
-sepolia = { key = "${ETHERSCAN_API_KEY}" }
-mainnet = { key = "${ETHERSCAN_API_KEY}" }
-
-# Deployment configuration for Sepolia
-[profile.sepolia]
-# Inherits all settings from default profile
-# Only override Sepolia-specific settings
-gas_reports = ["*"]
-gas_limit = 30000000
-block_gas_limit = 30000000
-gas_price = 1000000000  # 1 gwei
-
-# Deployment configuration for Hedera
-[profile.hedera]
+# Deployment configuration for Hedera Testnet
+[profile.hedera-testnet]
 gas_reports = ["*"]
 gas_limit = 1000000  # Adjust based on Hedera's requirements
 gas_price = 100000000  # Adjust based on Hedera's pricing model
+block_gas_limit = 15000000
+
+# Deployment configuration for Hedera Mainnet
+[profile.hedera-mainnet]
+gas_reports = ["*"]
+gas_limit = 1000000  # Adjust based on Hedera's requirements
+gas_price = 100000000  # Adjust based on Hedera's pricing model
+block_gas_limit = 15000000
