fix env examples + readme

--- a/contracts/env.example
+++ b/contracts/env.example
@@ -1,7 +1,6 @@
 # Hedera Testnet Configuration
 HEDERA_TESTNET_RPC_URL="https://testnet.hashio.io/api"
-HEDERA_PRIVATE_KEY="your-private-key-here"
-HEDERA_ACCOUNT_ID="your-account-id-here"
+HEDERA_PRIVATE_KEY="your-private-key-here"HEDERA_ACCOUNT_ID="your-account-id-here"
 
 # Hedera Mainnet Configuration (for future use)
 HEDERA_MAINNET_RPC_URL="https://mainnet.hashio.io/api"
