--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -1,43 +1,15 @@
 # Environment Variables Template
 # Copy this file to .env.local and fill in the values
 
-# Application
-NEXT_PUBLIC_APP_NAME="RONDA Web3"
-NEXT_PUBLIC_APP_URL="http://localhost:3000"
-
-# API Configuration
-NEXT_PUBLIC_API_URL=""
-API_SECRET_KEY=""
-
-# Database (for future use)
-DATABASE_URL=""
-
-# Authentication (for future use)
-NEXTAUTH_SECRET=""
-NEXTAUTH_URL=""
-
-# Web3 Configuration
-NEXT_PUBLIC_CHAIN_ID=""
-# Use a CORS-compatible Sepolia RPC URL from providers like:
-# - Infura: https://sepolia.infura.io/v3/YOUR_PROJECT_ID
-# - Alchemy: https://eth-sepolia.g.alchemy.com/v2/YOUR_API_KEY
-# - Public Node: https://ethereum-sepolia-rpc.publicnode.com
-NEXT_PUBLIC_RPC_URL="https://ethereum-sepolia-rpc.publicnode.com"
-NEXT_PUBLIC_CONTRACT_ADDRESS=""
-
-# WalletConnect Project ID (Get from https://cloud.walletconnect.com)
-NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=""
-
 # World ID Configuration (Get from https://developer.worldcoin.org)
 NEXT_PUBLIC_WORLDCOIN_APP_ID=""
-NEXT_PUBLIC_WORLDCOIN_ACTION=""
+NEXT_PUBLIC_WORLDCOIN_ACTION="verify-human"
 
-# External Services (for future use)
-NEXT_PUBLIC_SUPABASE_URL=""
-NEXT_PUBLIC_SUPABASE_ANON_KEY=""
+# Hedera Network Configuration
+NEXT_PUBLIC_RPC_URL="https://testnet.hashio.io/api"
 
-# Analytics (for future use)
-NEXT_PUBLIC_GOOGLE_ANALYTICS=""
+# WalletConnect Configuration (Get from https://cloud.walletconnect.com)
+NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=""
 
-# Development
-NODE_ENV="development"
+# API Configuration (optional)
+NEXT_PUBLIC_API_URL=""
